updated to include additional new block types

--- a/late-releasing-block.Rmd
+++ b/late-releasing-block.Rmd
@@ -354,46 +354,62 @@ new_blocks <- c(
   "Endo New Patient",
   "Covid New Patient",
   "Concussion New",
-  "CF NEW ",
-  "GYN NEW PT",
-  "Hematology New Patient",
-  "Initial Eval/New",
+  "CF NEW",
+  "GYN NEW PT", 
+  "Hematology New Patient", 
+  "Initial Eval/New", 
   "Lymphedema New",
-  "Medicare Wellness - New",
-  "New Cancer Patient",
-  "NEW EAR",
+  "Medicare Wellness - New", 
+  "New Cancer Patient", 
+  "NEW EAR", 
   "New Lar",
-  "New Patient Continued",
-  "New Patient Extended",
-  "New Patient freeze",
-  "New Patient Only",
+  "New Patient Continued", 
+  "New Patient Extended", 
+  "New Patient freeze", 
+  "New Patient Only", 
+  "New Patient pt, New Patient Start", 
+  "NEW PATIENT-GERIATRICS", 
+  "NEW RUNNING EVAL", 
+  "New Vertigo Patient", 
+  "NEW VOICE MODIFICATION", 
+  "New/Follow-up", 
+  "New/Fup/Hyl", 
+  "OB NEW PATIENT", 
+  "Onc PT New", 
+  "Oncology New Patient", 
+  "OPR Sports New", 
+  "PA GYN NEW", 
+  "PALL-NEW PT", 
+  "PEDS CONCUSSION NEW", 
+  "PEDS NEW", 
+  "PEDS ORTHO NEW", 
+  "Physical Exam - New", 
+  "SINUS NEW", 
+  "Sports New", 
+  "Travel NP", 
+  "VESTIBULAR NEW", 
+  "Zocdoc New", 
+  "New Patient 14-Day", 
+  "New Patient 21-Day", 
+  "New Patient 28-Day", 
+  "New Patient 7-Day", 
+  "ALS NEW", 
+  "APOS NEW", 
+  "Autoimmune New", 
+  "CF NEW", 
+  "COVID-19 SCREENING IN OFFICE NEW PATIENT", 
+  "COVID-19 SCREENING TELEHEALTH NEW PATIENT", 
+  "Initial Visit", 
+  "New Pt - Straight Medicare", 
+  "NEW SELIKOFF", 
+  "OPR New Patient", 
+  "Remote Monitoring Initial", 
+  "Telephone New Patient", 
+  "Video Visit New Extended", 
+  "Video Visit New Patient", 
+  "WOMEN'S SPORTS PT NEW",
   "New Patient pt",
-  "New Patient Start",
-  "NEW PATIENT-GERIATRICS",
-  "NEW RUNNING EVAL",
-  "New Vertigo Patient",
-  "NEW VOICE MODIFICATION",
-  "New/Follow-up",
-  "New/Fup/Hyl",
-  "OB NEW PATIENT",
-  "Onc PT New",
-  "Oncology New Patient",
-  "OPR Sports New",
-  "PA GYN NEW",
-  "PALL-NEW PT",
-  "PEDS CONCUSSION NEW",
-  "PEDS NEW",
-  "PEDS ORTHO NEW",
-  "Physical Exam - New",
-  "SINUS NEW",
-  "Sports New",
-  "Travel NP",
-  "VESTIBULAR NEW",
-  "Zocdoc New",
-  "New Patient 14-Day",
-  "New Patient 21-Day",
-  "New Patient 28-Day",
-  "New Patient 7-Day"
+  "New Patient Start"
 )
 
 release_blocks <- c(
@@ -422,7 +438,7 @@ late_block_raw$block_name <- block_name_raw$NAME[match(late_block_raw$BLOCK_C, b
 late_block_raw$org_block_name <- block_name_raw$NAME[match(late_block_raw$REL_BLOCK_C, block_name_raw$APPT_BLOCK_C)]
 
 late_block_raw <- late_block_raw %>%
-  mutate(comb_block_name = ifelse(is.na(org_block_name), block_name, org_block_name))
+  mutate(comb_block_name = trim(ifelse(is.na(org_block_name), block_name, org_block_name)))
 
 # Map Department and Provider Name ---------------------------------------------
 late_block_raw$Campus <- dept_mapping$SITE[match(late_block_raw$DEPARTMENT_ID, dept_mapping$DEPARTMENT_ID)]
