--- a/late-releasing-block.Rmd
+++ b/late-releasing-block.Rmd
@@ -314,6 +314,7 @@ block_name_tbl <- tbl(conn2, "ZC_APPT_BLOCK")
 orders_raw_tbl <- tbl(conn2, "ORDER_PROC")
 coverage_tbl <- tbl(conn2, "V_PAT_ENC_COVERAGE")
 
+
 ```
 
 
@@ -340,9 +341,6 @@ prov_mapping <- access_raw_tbl %>%
   dplyr::select(-total)
 
 prov_mapping$PROV_NAME <- trimws(gsub("\\[.*?\\]", "", prov_mapping$PROV_NAME_WID))
-
-block_name_raw <- block_name_tbl %>%
-  collect()
 
 ```
 
@@ -403,6 +401,7 @@ new_blocks <- c(
   "OPR New Patient", 
   "WOMEN'S SPORTS PT NEW",
   "New Patient pt",
+  "Pregnancy Confirmation",
   "New Patient Start",
   "NEW GYN 7-DAY",
   "NEW GYN 14-DAY",
@@ -433,20 +432,14 @@ late_block_raw <- block_raw_tbl %>%
          Slot.Month = month(SLOT_BEGIN_TIME)) %>%
   filter(Slot.Year == 2023) %>%
   filter(Slot.Month >= 04) %>%
-  collect() %>%
-  mutate(Slot.YearMonth = format(as.Date(Slot.DateYear), "%Y-%m"))
-
-late_block_raw$block_name <- block_name_raw$NAME[match(late_block_raw$BLOCK_C, block_name_raw$APPT_BLOCK_C)]
-late_block_raw$org_block_name <- block_name_raw$NAME[match(late_block_raw$REL_BLOCK_C, block_name_raw$APPT_BLOCK_C)]
-
-late_block_raw <- late_block_raw %>%
+  left_join(block_name_tbl %>% dplyr::select(APPT_BLOCK_C, NAME), 
+            by = c("BLOCK_C" = "APPT_BLOCK_C")) %>%
+  left_join(block_name_tbl %>% dplyr::select(APPT_BLOCK_C, NAME), 
+            by = c("REL_BLOCK_C" = "APPT_BLOCK_C")) %>%
+  rename(block_name = NAME.x,
+         org_block_name = NAME.y) %>%
   mutate(comb_block_name = trim(ifelse(is.na(org_block_name), block_name, org_block_name)))
-
-# Map Department and Provider Name ---------------------------------------------
-late_block_raw$Campus <- dept_mapping$SITE[match(late_block_raw$DEPARTMENT_ID, dept_mapping$DEPARTMENT_ID)]
-late_block_raw$Department <- dept_mapping$DEPARTMENT_NAME[match(late_block_raw$DEPARTMENT_ID, dept_mapping$DEPARTMENT_ID)]
-late_block_raw$Provider <- prov_mapping$PROV_NAME[match(late_block_raw$PROV_ID, prov_mapping$PROV_ID)]
-late_block_raw$Campus.Specialty <- dept_mapping$DEPT_SPECIALTY_NAME[match(late_block_raw$DEPARTMENT_ID, dept_mapping$DEPARTMENT_ID)]
+  
 ```
 
 
@@ -456,25 +449,26 @@ late_block_raw$Campus.Specialty <- dept_mapping$DEPT_SPECIALTY_NAME[match(late_b
 ## Shows all blocks associated to each time slot -------------------------------
 blocks_combined <- late_block_raw %>%
   ungroup() %>%
-  arrange(Campus, DEPARTMENT_ID, Department, SLOT_BEGIN_TIME) %>%
-  group_by(Campus, DEPARTMENT_ID, Department, Provider, SLOT_BEGIN_TIME) %>%
-  mutate(block_combination = paste0(unique(comb_block_name), collapse = ', ')) %>%
-  mutate(total_blocks = length(unique(comb_block_name))) %>%
-  mutate(Slot.Year = year(SLOT_BEGIN_TIME),
-         Slot.Month = month(SLOT_BEGIN_TIME))
+  arrange(DEPARTMENT_ID, SLOT_BEGIN_TIME, comb_block_name) %>%
+  group_by(DEPARTMENT_ID, PROV_ID, SLOT_BEGIN_TIME, Slot.DateYear, comb_block_name) %>%
+  summarise(total_blocks = n())
 
 
 ## Count of Block Combination Usage --------------------------------------------
 block_combination_usage <- blocks_combined %>%
-  group_by(Campus, DEPARTMENT_ID, Department, Provider, Slot.DateYear, block_combination, total_blocks) %>%
+  collect() %>%
+  group_by(DEPARTMENT_ID, PROV_ID, SLOT_BEGIN_TIME) %>%
+  mutate(block_combination = paste0(unique(comb_block_name), collapse = ', ')) %>%
+  mutate(total_blocks = length(unique(comb_block_name))) %>%
+  group_by(DEPARTMENT_ID, PROV_ID, Slot.DateYear, block_combination, total_blocks) %>%
   summarise(total_slots = length(unique(SLOT_BEGIN_TIME))) %>%
-  rename(Site = Campus) 
-  
-
-## Flag Incorrectly Built Slots ------------------------------------------------
-block_combination_usage <- block_combination_usage %>%
   mutate(slot_incorrect = case_when(total_blocks >1 & str_detect(block_combination, str_c(release_blocks, collapse = "|")) ~ "Yes",
                                     TRUE ~ "No"))
+  
+  
+block_combination_usage$Site <- dept_mapping$SITE[match(block_combination_usage$DEPARTMENT_ID, dept_mapping$DEPARTMENT_ID)]
+block_combination_usage$Department <- dept_mapping$DEPARTMENT_NAME[match(block_combination_usage$DEPARTMENT_ID, dept_mapping$DEPARTMENT_ID)]
+block_combination_usage$Provider <- prov_mapping$PROV_NAME[match(block_combination_usage$PROV_ID, prov_mapping$PROV_ID)]
 
 ```
 
@@ -482,39 +476,60 @@ block_combination_usage <- block_combination_usage %>%
 ```{r Time Release Block Conversion, echo = FALSE, warning = FALSE, message = FALSE}
 
 # Categorize slots by non-new vs. new vs. new time-relese 
-late_block_raw <- blocks_combined %>%
+blocks_combined_type <- blocks_combined %>%
   mutate(new_block = case_when(comb_block_name %in% new_blocks ~ "NEW_BLOCK",
                                TRUE ~ "NON_NEW_BLOCK"),
          release_block = case_when(comb_block_name %in% release_blocks ~ "TIME_RELEASE",
                                    TRUE ~ "NON_TIME_RELEASE")) %>%
-  group_by(Campus, Campus.Specialty, Department, DEPARTMENT_ID, Provider, Slot.YearMonth, SLOT_BEGIN_TIME, block_combination, new_block, release_block) %>%
-  summarise(total = n()) 
-  
+  collect() %>%
+  arrange(DEPARTMENT_ID, PROV_ID, SLOT_BEGIN_TIME, comb_block_name) %>%
+  group_by(DEPARTMENT_ID, PROV_ID, SLOT_BEGIN_TIME) %>%
+  mutate(block_combination = paste0(unique(comb_block_name), collapse = ', ')) %>%
+  group_by(DEPARTMENT_ID, PROV_ID, SLOT_BEGIN_TIME,  block_combination, new_block, release_block) %>%
+  summarise(total = n()) %>%
+  mutate(Slot.YearMonth = format(as.Date(SLOT_BEGIN_TIME),"%Y-%m"))
+
+
+blocks_combined_type$Site <- dept_mapping$SITE[match(blocks_combined_type$DEPARTMENT_ID, dept_mapping$DEPARTMENT_ID)]
+blocks_combined_type$Specialty <- dept_mapping$DEPT_SPECIALTY_NAME[match(blocks_combined_type$DEPARTMENT_ID, dept_mapping$DEPARTMENT_ID)]
+blocks_combined_type$Department <- dept_mapping$DEPARTMENT_NAME[match(blocks_combined_type$DEPARTMENT_ID, dept_mapping$DEPARTMENT_ID)]
+blocks_combined_type$Provider <- prov_mapping$PROV_NAME[match(blocks_combined_type$PROV_ID, prov_mapping$PROV_ID)]
+
 
 # Summary of slot type by month   
-new_block_conversion <- late_block_raw %>%
+new_block_conversion <- blocks_combined_type %>%
   pivot_wider(names_from = c("new_block","release_block"),
               values_from = total,
               values_fill = 0) %>%
+  mutate(incorrect_new_block = ifelse(NON_NEW_BLOCK_NON_TIME_RELEASE>0 & NEW_BLOCK_NON_TIME_RELEASE>0, 1, 0),
+         incorrect_time_release_block = ifelse(NON_NEW_BLOCK_NON_TIME_RELEASE>0 & NEW_BLOCK_TIME_RELEASE>0, 1, 0)) %>%
   mutate(NON_NEW_BLOCK_NON_TIME_RELEASE = ifelse(NON_NEW_BLOCK_NON_TIME_RELEASE>0 & NEW_BLOCK_NON_TIME_RELEASE==0 & NEW_BLOCK_TIME_RELEASE==0,1,0),
          NEW_BLOCK_NON_TIME_RELEASE = ifelse(NEW_BLOCK_NON_TIME_RELEASE>0 & NEW_BLOCK_TIME_RELEASE==0,1,0),
          NEW_BLOCK_TIME_RELEASE = ifelse(NEW_BLOCK_TIME_RELEASE>0,1,0)) %>%
-  group_by(Campus, Campus.Specialty, Department,  DEPARTMENT_ID, Provider, Slot.YearMonth) %>%
+  group_by(Site, Specialty, Department, DEPARTMENT_ID, Provider, Slot.YearMonth) %>%
   summarise(NON_NEW_BLOCK_NON_TIME_RELEASE = sum(NON_NEW_BLOCK_NON_TIME_RELEASE),
             NEW_BLOCK_NON_TIME_RELEASE = sum(NEW_BLOCK_NON_TIME_RELEASE),
-            NEW_BLOCK_TIME_RELEASE = sum(NEW_BLOCK_TIME_RELEASE)) %>%
+            NEW_BLOCK_TIME_RELEASE = sum(NEW_BLOCK_TIME_RELEASE),
+            incorrect_new_block = sum(incorrect_new_block),
+            incorrect_time_release_block = sum(incorrect_time_release_block),
+            TOTAL_BLOCKS = n()) %>%
   mutate(DEPARTMENT_ID = as.character(DEPARTMENT_ID)) %>%
-  rowwise() %>% 
-  mutate(TOTAL_BLOCKS = sum(c_across(where(is.numeric)), na.rm = T)) %>%
   mutate(TOTAL_NEW_BLOCKS = NEW_BLOCK_NON_TIME_RELEASE + NEW_BLOCK_TIME_RELEASE,
          NEW_BLOCK_PERC = round(TOTAL_NEW_BLOCKS/TOTAL_BLOCKS,2),
-         NEW_BLOCK_TIME_RELEASE_PERC = round(NEW_BLOCK_TIME_RELEASE/TOTAL_NEW_BLOCKS,2)) %>%
-  arrange(Campus, Department, Provider)
+         NEW_BLOCK_TIME_RELEASE_PERC = round(NEW_BLOCK_TIME_RELEASE/TOTAL_NEW_BLOCKS,2),
+         correct_new_block = NEW_BLOCK_NON_TIME_RELEASE - incorrect_new_block,
+         correct_time_release_block = NEW_BLOCK_TIME_RELEASE - incorrect_time_release_block,
+         incorrect_new_block_perc = round(incorrect_new_block/NEW_BLOCK_NON_TIME_RELEASE,2),
+         incorrect_time_release_perc = round(incorrect_time_release_block/NEW_BLOCK_TIME_RELEASE,2)) %>%
+  arrange(Site, Department, Provider)
 
 
-order <- c("Campus","Campus.Specialty","Department","DEPARTMENT_ID","Provider","Slot.YearMonth",
+order <- c("Site","Specialty","Department","DEPARTMENT_ID","Provider","Slot.YearMonth",
            "TOTAL_BLOCKS","TOTAL_NEW_BLOCKS",
            "NON_NEW_BLOCK_NON_TIME_RELEASE","NEW_BLOCK_NON_TIME_RELEASE","NEW_BLOCK_TIME_RELEASE",
+           "correct_new_block", "incorrect_new_block",
+           "correct_time_release_block", "incorrect_time_release_block",
+           "incorrect_new_block_perc", "incorrect_time_release_perc",
            "NEW_BLOCK_PERC", "NEW_BLOCK_TIME_RELEASE_PERC")
 
 new_block_conversion <- new_block_conversion[order]
@@ -527,8 +542,107 @@ new_block_conversion$NEW_BLOCK_TIME_RELEASE_PERC[is.nan(new_block_conversion$NEW
 
 ```{r Time Release of Block Duration vs. Appt Length, echo = FALSE, warning = FALSE, message = FALSE}
 
-
-
+# # Slot Length, Unavailability Information 
+# block_raw_test <- block_raw_tbl %>%
+#   head(10) %>%
+#   collect()
+# 
+# availability_raw_test <- availability_raw_tbl %>%
+#   head(10) %>%
+#   collect()
+# 
+# access_raw_test <- access_raw_tbl %>%
+#   head(10) %>%
+#   collect()
+# 
+# 
+# block_raw_test <- block_raw_tbl %>%
+#   left_join(availability_tbl %>% dplyr::select(APPT_BLOCK_C, NAME), 
+#             by = c("BLOCK_C" = "APPT_BLOCK_C")) %>%
+#   
+# 
+# 
+# 
+# 
+#   mutate(Slot.DateYear = TO_DATE(SLOT_BEGIN_TIME),
+#          Slot.Year = year(SLOT_BEGIN_TIME),
+#          Slot.Month = month(SLOT_BEGIN_TIME)) %>%
+#   filter(Slot.Year == 2023) %>%
+#   filter(Slot.Month >= 04) %>%
+#   dplyr::select(DEPARTMENT_ID, PROV_ID, SLOT_BEGIN_TIME, NUM_APTS_SCHEDULED, ORG_REG_OPENINGS, ORG_OVBK_OPENINGS,
+#                 SLOT_LENGTH, UNAVAILABLE_RSN_NAME, PRIVATE_YN, APPT_OVERBOOK_YN, APPT_BLOCK_NAME,
+#                 APPT_PRC_NAME, PAT_ENC_CSN_ID, DAY_UNAVAIL_RSN_NAME, 
+#                 TIME_UNAVAIL_RSN_NAME, DAY_HELD_RSN_NAME, TIME_HELD_RSN_NAME, OUTSIDE_TEMPLATE_YN) %>%
+#   collect()
+# 
+# 
+# access_raw <- access_raw_tbl %>%
+#   mutate(Appt.DateYear = TO_DATE(CONTACT_DATE)) %>%
+#   mutate(Appt.Year = year(CONTACT_DATE),
+#          Appt.Month = month(CONTACT_DATE)) %>%
+#   filter(Appt.Year >= 2023) %>%
+#   filter(Appt.Month >= 04) %>%
+#   filter(DERIVED_STATUS_DESC == "Arrived") %>%
+#   group_by(DEPARTMENT_ID, PROV_ID, PROV_NAME_WID, VISIT_PROV_STAFF_RESOURCE_C,
+#            PRC_NAME, APPT_LENGTH, VISIT_TYPE, VISIT_METHOD, VISIT_GROUP_NUM) %>%
+#   summarise(total = n()) %>%
+#   collect() %>%
+#   dplyr::select(-total)
+# 
+# 
+# appt_type_mapping <- access_raw %>%
+#   group_by(DEPARTMENT_ID, PROV_ID, PROV_NAME_WID, VISIT_PROV_STAFF_RESOURCE_C,
+#            PRC_NAME, VISIT_TYPE, VISIT_METHOD, VISIT_GROUP_NUM) %>%
+#   summarise(total = n()) %>%
+#   dplyr::select(-total)
+#   
+# 
+# 
+# 
+# booked_appts <- availability_raw %>%
+#   group_by(DEPARTMENT_ID, PROV_ID, SLOT_BEGIN_TIME, SLOT_LENGTH, UNAVAILABLE_RSN_NAME, APPT_BLOCK_NAME, APPT_PRC_NAME, PAT_ENC_CSN_ID) %>%
+#   summarise(total = n()) %>%
+#   group_by(DEPARTMENT_ID, PROV_ID, SLOT_BEGIN_TIME, SLOT_LENGTH, UNAVAILABLE_RSN_NAME, APPT_BLOCK_NAME, APPT_PRC_NAME) %>%
+#   summarise(total_appts = n())
+# 
+# 
+# booked_appts <- left_join(booked_appts, appt_type_mapping, by = c("DEPARTMENT_ID" = "DEPARTMENT_ID",
+#                                                            "PROV_ID" = "PROV_ID",
+#                                                            "APPT_PRC_NAME" = "PRC_NAME"))
+# 
+# 
+# 
+# 
+# 
+# 
+# 
+# 
+# 
+# 
+# 
+# 
+# block_appt_dur_comparison <- blocks_combined %>%
+#   group_by(Campus, DEPARTMENT_ID, Department, Provider, Slot.Year, Slot.Month, Slot.YearMonth, Slot.DateYear, SLOT_BEGIN_TIME, block_combination) %>%
+#   summarise(total = n()) 
+# 
+# block_appt_dur_comparison <- block_appt_dur_comparison %>%
+#   group_by(DEPARTMENT_ID, Provider, Slot.DateYear) %>%
+#   mutate(previous_slot_time = lag(SLOT_BEGIN_TIME)) %>%
+#   mutate(block_length = difftime(SLOT_BEGIN_TIME, previous_slot_time, "mins"))
+# 
+# block_appt_dur_comparison <- block_appt_dur_comparison %>%
+#   mutate(block_length = as.numeric(block_length)/60)
+# 
+# block_appt_dur_comparison_summary <- block_appt_dur_comparison %>%
+#   filter(!is.na(block_length)) %>%
+#   group_by(Campus, DEPARTMENT_ID, Department, Provider, Slot.YearMonth, block_combination, block_length) %>%
+#   summarise(total_blocks = n()) 
+# 
+# 
+# test <- block_appt_dur_comparison_summary %>% 
+#   group_by(Campus, Department, Provider, block_length) %>%
+#   summarise(total = sum(total_blocks))
+#   
 
 ```
 
@@ -600,11 +714,11 @@ reactable(
             }
           },
 
-  groupBy = c("Campus", "Department", "Provider", "Slot.YearMonth"),
+  groupBy = c("Site", "Department", "Provider", "Slot.YearMonth"),
 
   columns = list(
 
-    Campus = colDef(
+    Site = colDef(
       name = "Site",
       minWidth = 180),
 
@@ -621,7 +735,7 @@ reactable(
     TOTAL_BLOCKS = colDef(
       name = "Total Blocks",
       maxWidth = 100,
-      headerStyle = list(background = "#d80b8c", color = "white", fontWeight = "Bold", fontSize = "14px"),
+      headerStyle = list(background = "#212070", color = "white", fontWeight = "Bold", fontSize = "14px"),
       aggregate = 'sum',
       format = colFormat(separators = TRUE, digits = 0),
       style = list(borderLeft = "1.5px solid rgb(230, 230, 230)")
@@ -630,25 +744,53 @@ reactable(
     TOTAL_NEW_BLOCKS = colDef(
       name = "Total New Patient Blocks",
       maxWidth = 100,
+      headerStyle = list(background = "#212070", color = "white", fontWeight = "Bold", fontSize = "14px"),
+      aggregate = 'sum',
+      format = colFormat(separators = TRUE, digits = 0),
+      style = list(borderLeft = "1.5px solid rgb(230, 230, 230)")
+    ),
+    
+    
+    correct_new_block = colDef(
+      name = "Clean Non-Late-Releasing Blocks",
+      maxWidth = 100,
       headerStyle = list(background = "#d80b8c", color = "white", fontWeight = "Bold", fontSize = "14px"),
       aggregate = 'sum',
       format = colFormat(separators = TRUE, digits = 0),
       style = list(borderLeft = "1.5px solid rgb(230, 230, 230)")
     ),
     
-    NEW_BLOCK_TIME_RELEASE = colDef(
-      name = "Total New Patient Blocks Converted to Late-Releasing New Patient Blocks",
-      maxWidth = 200,
+    incorrect_new_block = colDef(
+      name = "Unclean Non-Late-Releasing Combo Blocks",
+      maxWidth = 100,
       headerStyle = list(background = "#d80b8c", color = "white", fontWeight = "Bold", fontSize = "14px"),
       aggregate = 'sum',
       format = colFormat(separators = TRUE, digits = 0),
       style = list(borderLeft = "1.5px solid rgb(230, 230, 230)")
     ),
-
+    
+    correct_time_release_block = colDef(
+      name = "Clean Late-Releasing Blocks",
+      maxWidth = 100,
+      headerStyle = list(background = "#00aeef", color = "white", fontWeight = "Bold", fontSize = "14px"),
+      aggregate = 'sum',
+      format = colFormat(separators = TRUE, digits = 0),
+      style = list(borderLeft = "1.5px solid rgb(230, 230, 230)")
+    ),
+    
+    incorrect_time_release_block = colDef(
+      name = "Unclean Late-Releasing Combo Blocks",
+      maxWidth = 100,
+      headerStyle = list(background = "#00aeef", color = "white", fontWeight = "Bold", fontSize = "14px"),
+      aggregate = 'sum',
+      format = colFormat(separators = TRUE, digits = 0),
+      style = list(borderLeft = "1.5px solid rgb(230, 230, 230)")
+    ),
+    
     NEW_BLOCK_PERC = colDef(
       name = "% of New Patient Blocks",
       maxWidth = 200,
-     headerStyle = list(background = "#00aeef", color = "white", fontWeight = "Bold", fontSize = "14px"),
+     headerStyle = list(background = "#a5a7a5", color = "white", fontWeight = "Bold", fontSize = "14px"),
       aggregate = JS("function(values, rows) {
         let totalTOTAL_BLOCKS = 0
         let totalTOTAL_NEW_BLOCKS = 0
@@ -661,11 +803,11 @@ reactable(
       format = colFormat(percent = TRUE, digits = 0),
       style = list(borderLeft = "1.5px solid rgb(230, 230, 230)")
     ),
-
+    
     NEW_BLOCK_TIME_RELEASE_PERC = colDef(
-      name = "% of New Patient Blocks Converted to Late-Releasing New Patient Blocks",
+      name = "% of New Patient Blocks Converted to Late-Releasing Blocks",
       maxWidth = 200,
-     headerStyle = list(background = "#00aeef", color = "white", fontWeight = "Bold", fontSize = "14px"),
+     headerStyle = list(background = "#a5a7a5", color = "white", fontWeight = "Bold", fontSize = "14px"),
       aggregate = JS("function(values, rows) {
         let totalTOTAL_NEW_BLOCKS = 0
         let totalNEW_BLOCK_TIME_RELEASE = 0
@@ -678,11 +820,16 @@ reactable(
       format = colFormat(percent = TRUE, digits = 0),
       style = list(borderLeft = "1.5px solid rgb(230, 230, 230)")
     ),
-    
-    Campus.Specialty = colDef(show =F),
+
+    Specialty = colDef(show =F),
     DEPARTMENT_ID = colDef(show =F),
     NON_NEW_BLOCK_NON_TIME_RELEASE = colDef(show =F),
-    NEW_BLOCK_NON_TIME_RELEASE = colDef(show =F)
+    NEW_BLOCK_TIME_RELEASE = colDef(show =F),
+    NEW_BLOCK_NON_TIME_RELEASE = colDef(show =F),
+    incorrect_new_block = colDef(show =F),
+    incorrect_late_release_block = colDef(show =F),
+    incorrect_new_block_perc = colDef(show =F),
+    incorrect_time_release_perc = colDef(show =F)
 
   ) # Close Columns
 
@@ -722,7 +869,8 @@ htmltools::browsable(
 
 reactable(
   block_combination_usage %>%
-    dplyr::select(-total_blocks) %>%
+    ungroup() %>%
+    dplyr::select(-c(total_blocks,DEPARTMENT_ID, PROV_ID)) %>%
     mutate(Slot.DateYear = as.character(Slot.DateYear)),
   elementId = "block-type-count",
   # elementId = "cars-grouping-table",
